--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "mongodb": "^7.0.0",
-    "next": "16.0.2-canary.1",
+    "next": "16.0.10",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^6.10.1",
     "postgres": "^3.4.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
